--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
-        "use": "@vercel/node"
+        "src": "index.js"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "/*.js",
         "dest": "index.js"
       }
     ]
