--- a/package.json
+++ b/package.json
@@ -6,5 +6,22 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
     "vercel": "^24.2.0"
-  }
+  },
+  "name": "back-end",
+  "version": "1.0.0",
+  "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
