--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
-    "version": 2,
+    "version": 3,
     "builds": [
-      {
-        "src": "index.js"
-      }
+        {
+            "src":"./index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/*.js",
-        "dest": "index.js"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
+}
